Version 2.02.46 - 
================================
  Block SIGTERM & SIGINT in clvmd subthreads.
  Detect and conditionally wipe swapspace signatures in pvcreate.
  Fix maximal volume count check for snapshots if max_lv set for volume group.
  Fix lvcreate to remove cow volume if the snapshot creation fails.
  Fix error messages when PV uuid or pe_start reading fails.
  Rename liblvm.a to liblvm-internal.a and build new application library.
  Flush memory pool and fix locking in clvmd refresh and backup command.
  Fix unlocks in clvmd-corosync. Broken in 2.02.45.
  Fix error message when adding metadata directory to internal list fails.
  Fix size and error message of memory allocation at backup initialization.
  Remove old metadata backup file after renaming vg.
  Restore log_suppress state when metadata backup file is up-to-date.

Version 2.02.45 - 3rd March 2009
================================
  Avoid scanning empty metadata areas for VG names.
  Attempt proper clean up in child before executing new binary in exec_cmd().
  Do not scan devices if reporting only attributes from PV label.
  Use pkgconfig to obtain corosync library details during configuration.
  Fix error returns in clvmd-corosync interface to DLM.
  Add --refresh to vgchange and vgmknodes man pages.
  Pass --test from lvresize to fsadm as --dry-run.
  Supply argv[] list to exec_cmd() to allow for variable number of parameters.
  Prevent fsadm from checking mounted filesystems.
  No longer treats any other key as 'no' when prompting in fsadm.
  Tidy fsadm command line processing.
  Add lib/lvm.h and lib/lvm_base.c for the new library interface.
  Move tools/version.h to lib/misc/lvm-version.h.
  Split LVM_VERSION into MAJOR, MINOR, PATCHLEVEL, RELEASE and RELEASE_DATE.
  Add system_dir parameter to create_toolcontext().
  Add --dataalignment to pvcreate to specify alignment of data area.
  Exclude LCK_CACHE locks from _vg_lock_count, fixing interrupt unblocking.